--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Immeuble",
-    "slug": "Immeuble",
+    "slug": "tadartinoapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -29,8 +29,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "c763bdd6-adcc-4208-8e0e-2e936788e9cd"
+        "projectId": "3dc272cb-3de8-4733-857e-4f69328c1628"
       }
-    }
+    },
+    "owner": "oussama-pixel"
   }
 }
