--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Immeuble",
-    "slug": "tadartinoapp",
+    "slug": "tadartinoappversionui",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -29,7 +29,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "3dc272cb-3de8-4733-857e-4f69328c1628"
+        "projectId": "0b1588c9-a5bf-4490-b1e8-11b225fb46a7"
       }
     },
     "owner": "oussama-pixel"
