--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "remote-redux-devtools": "^0.5.16"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "react-native-asset": "^2.1.1"
+    "react-native-asset": "^2.1.1",
+    "remote-redux-devtools": "^0.5.16"
   },
   "private": true
 }
